--- a/html/hello.html
+++ b/html/hello.html
@@ -1,7 +1,7 @@
 <DOCTYPE html>
 <html>
     <head>
-        <link type="text/css" rel="stylesheet" href="../css/index.css">
+        <link type="text/css" rel="stylesheet" href="../css/hello.css">
         <link href="https://fonts.googleapis.com/css?family=Anton|Indie+Flower" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
         
