--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a href="index.html">HOME</a>
             <a href="about.html">ABOUT</a>
             <a href="portfolio.html">PORTFOLIO</a>
-            <a href="0-Successful%20Question-Prompts.pdf" target="_blank">RESUME</a>
+            <a href="../Resume.pdf" target="_blank">RESUME</a>
         </div>
         
         <!--first section-->
