--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
     <body>
         <h><b>Oops!</b></h>
         <p>Still a work in progress. Will be finished soon!</p>
-        <a href=index.html>return to home</a>
+        <a href="index.html">return to home</a>
    
     </body>
     
