--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <DOCTYPE html>
 <html>
     <head>
+        <title>Roberto's Website!</title>
         <link type="text/css" rel="stylesheet" href="../css/index.css">
         <link href="https://fonts.googleapis.com/css?family=Anton|Indie+Flower" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab|Tajawal:700" rel="stylesheet">
