--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <title>Roberto's Website!</title>
+        
+        <link rel="shortcut icon" href="../images/favicon.png" type="image/png" />
+        
         <link type="text/css" rel="stylesheet" href="../css/index.css">
         <link href="https://fonts.googleapis.com/css?family=Anton|Indie+Flower" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab|Tajawal:700" rel="stylesheet">
