--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="secondsection">
             
             <h2 id="h2">Education</h2> 
-            <img src="../images/512px-The_University_of_California_Davis.svg.png" alt="UCseal" class="seal">
+            <img src="images/512px-The_University_of_California_Davis.svg.png" alt="UCseal" class="seal">
             <h2 id="h3">Experienced or have worked with</h2>
             <p id="p3">•C/C++<br/>•HTML<br/>•CSS<br/>•Python</p>
             
