--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Roberto's Website!</title>
         
-        <link rel="shortcut icon" type="image/png" href="../images/favicon.png">
+        <link rel="shortcut icon" type="image/png" href="images/favicon.png">
         
         <link type="text/css" rel="stylesheet" href="../css/index.css">
         <link href="https://fonts.googleapis.com/css?family=Anton|Indie+Flower" rel="stylesheet">
