--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <DOCTYPE html>
 <html>
     <head>
-        <title>Roberto's Website!new</title>
+        <title>Roberto's Website!</title>
         
         <link rel="shortcut icon" type="image/png" href="images/favicon.png">
         
