--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         <li id="home"><a href="index.html">HOME</a></li>
                         <li id="about"><a href="about.html">ABOUT</a></li>
                         <li id="portfolio"><a href="portfolio.html">PORTFOLIO</a></li>
-                        <li id="resume"><a href="../files/Resume.pdf" target="_blank">RESUME</a></li>
+                        <li id="resume"><a href="Resume.pdf" target="_blank">RESUME</a></li>
                     </ul>
                     
                 </div>    
@@ -151,7 +151,7 @@
                 <div class="row">
                     <div class="col-md-6 col-sm-6">
                         <div class="secondSection-left">
-                            <img src="../images/me.png">
+                            <img src="images/me.png">
                         </div>
                     </div>
                     <div class="col-md-6 col-sm-6">
