--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <meta name="msapplication-TileColor" content="#da532c">
         <meta name="theme-color" content="#ffffff">
         
-        <link type="text/css" rel="stylesheet" href="/index.css">
+        <link type="text/css" rel="stylesheet" href="css/index.css">
         <link href="https://fonts.googleapis.com/css?family=Anton|Indie+Flower|Roboto+Slab|Rubik:300i|Tajawal:700" rel="stylesheet">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
