--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <div class="row">
                     <div class="col-md-6 col-sm-6">
                         <div class="secondSection-left">
-                            <img src="images/me.png">
+                            <img src="images/IMG-0964-01 (1).jpeg">
                         </div>
                     </div>
                     <div class="col-md-6 col-sm-6">
