--- a/index.html
+++ b/index.html
@@ -1,444 +1,99 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <html>
-    <head>
-        <title>Roberto Lozano</title>
 
-        <meta name="viewport" content="width=device-width, initial-scale=1"/>
-
-        <link rel="manifest" href="/site.webmanifest">
-        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-        <meta name="msapplication-TileColor" content="#da532c">
-        <meta name="theme-color" content="#ffffff">
-
-        <link type="text/css" rel="stylesheet" href="css/index.css">
-
-        <link href="https://fonts.googleapis.com/css?family=Anton|Indie+Flower|Roboto+Slab|Rubik:300i|Tajawal:700" rel="stylesheet">
-
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
-
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
-        <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
-
-        <!--clock code -->
-        <script>
-
-            function startTime() {
-                var today = new Date();
-                var h = today.getHours();
-                var m = today.getMinutes();
-                var s = today.getSeconds();
-                var day = today.getDate();
-                var month = today.getMonth();
-                var textMonth;
-                var year = today.getFullYear();
-                var ampm = "am";
-                var hour;
-
-                textMonth = translateMonth(month);
-                ampm = timeOfDay(h);
-                m = checkTime(m);
-                s = checkTime(s);
-                hour = militaryToStandard(h);
-                document.getElementById('txt').innerHTML =
-                    hour + ":" + m + ":" + s + " " + ampm + "\xa0\xa0\xa0\xa0\xa0\xa0\xa0\xa0\xa0" + day + " " + textMonth + " " + year;
-
-                var t = setTimeout(startTime, 500);
-            }
-
-             function translateMonth(i){
-                if(i == 0){return "January";}
-                if(i == 1){return "February";}
-                if(i == 2){return "March";}
-                if(i == 3){return "April";}
-                if(i == 4){return "May";}
-                if(i == 5){return "June";}
-                if(i == 6){return "July";}
-                if(i == 7){return "August";}
-                if(i == 8){return "September";}
-                if(i == 9){return "October";}
-                if(i == 10){return "November";}
-                if(i == 11){return "December";}
-                else{
-                    return "error";
-                }
-            }
-
-            function timeOfDay(i){
-                if(i >= 12)
-                {
-                    return "PM";
-                }
-                else{
-                    return "AM";
-                }
-            }
-
-            function militaryToStandard(i){
-                if(i > 12)
-                {
-                    return i-12;
-                }
-                else{
-                    return i;
-                }
-            }
-
-            function checkTime(i) {
-                if (i < 10) {i = "0" + i};  // add zero in front of numbers < 10
-                return i;
-            }
-        </script>
-
-
-
-    </head>
-
-    <!--start of body-->
-    <body onload="startTime()" id="body1">
-
-        <nav class="navbar navbar-default navbar-fixed-right" id="nav1">
-
-            <div class="container">
-
-                <div class="navbar-header">
-
-                    <button id="button" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-
-                    <div class="Brand nav navbar-nav navbar-left">
-
-                        <a id="navbarName" class="navbar-brand" href="#footerSection">Roberto Lozano</a>
-
-                        <div id="txt"></div>
-
-                    </div>
-                </div>
-
-                <div id="navbar" class="collapse navbar-collapse">
-
-                    <ul class="nav navbar-nav navbar-right" id="navbar-options">
-                        <li id="home"><a href="index.html">HOME</a></li>
-                        <li id="about"><a href="about.html">ABOUT</a></li>
-                        <li id="portfolio"><a href="portfolio.html">PORTFOLIO</a></li>
-                        <li id="resume"><a href="../files/Resume.pdf" target="_blank">RESUME</a></li>
-                    </ul>
-
-                </div>
-            </div>
-
-        </nav>
-
-
-        <section id="firstSection">
-            <div class="container">
-                <div class="row">
-
-                    <div id="name" class="col-md-6 col-sm-6">
-
-                        <div class="firstSection-right">
-                            <h1 id="h1">Roberto Lozano</h1>
-                            <p id="p1">UC Davis Third Year Undergraduate Student.</p>
-                            <p id="p2">Studying Computer Science.</p>
-                        </div>
-
-                        <!--
-                        <br>
-                        <a id = "readmore1" class="btn btn-default btn-lg showcase-btn">Read More</a>
-                        -->
-
-                    </div>
-
-                    <div class="col-md-6 col-sm-6">
-                        <img id ="parkPic" src="images/goodlooking.jpeg">
-
-                    </div>
-                </div>
-            </div>
-        </section>
-
-
-        <section id="secondSection">
-            <div class="container">
-                <div class="row">
-                    <!--<div class="col-md-6 col-sm-6">
-                        <div class="secondSection-left">
-                            <img src="../images/me.png">
-                        </div>
-                    </div>-->
-                    <div class="col-md-6 col-sm-6">
-                        <div class="secondSection-right">
-
-                            <h2 id="h2">Education</h2>
-                            <img id="seal" src="../images/512px-The_University_of_California_Davis.svg.png" alt="UCseal" class="seal">
-                            <h2 id="h3">Experienced or have worked with</h2>
-                            <div class="list">
-                                <p id="list1">•C/C++</p><p id="list2">•HTML&nbsp&nbsp</p>
-                                <p id="list3">•CSS&nbsp&nbsp&nbsp&nbsp&nbsp</p>
-                                <p id="list4">•Python</p>
-                                <p id="list5">•Arduino</p>
-                                <p id="list6">•LinkBot</p>
-                                <p id="list7">•GO</p>
-                                <p id="list8">•Lisp</p>
-                                <p id="list9">•Prolog</p>
-                                <p id="list10">•Assembly</p>
-
-                            </div>
-
-                            <!--<a id="readmore2" class="btn btn-default btn-lg">Read More</a>-->
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!--<hr>-->
-
-        <section id="thirdSection">
-            <div class="container">
-                <div id="thirdSectionRow" class="row">
-                        <h id="thirdSectionTitle">See what I'm up to!</h>
-                </div>
-
-                <div id="videosRow" class="row">
-                    <div class="col-md-6 col-sm-6">
-                        <div class="thirdSection-left">
-                            <video autoplay loop muted>
-                            <source src="videos/20180828_165205_2.mp4" type="video/mp4">
-
-                            </video>
-                        </div>
-                    </div>
-
-                    <div class="col-md-6 col-sm-6">
-                        <div class="thirdSection-right">
-                            <video id = "soldering" autoplay loop muted>
-                            <source src="videos/20180820_170522_2.mp4" type="video/mp4">
-
-                            </video>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-        </section>
-
-        <section id="footerSection">
-
-        <div class="container">
-
-        <div class="row">
-
-            <div id="socialinfo">
-
-                <h2 id="h4">Find Me On:</h2>
-
-                    <div id="socialIcons">
-
-                        <a target="_blank"     href="https://www.facebook.com/roberto.lozano.961"><i class="fab fa-facebook-square" id="facebook"></i></a>
-
-                        <a target="_blank" href="https://www.instagram.com/rlozano_/?hl=en">
-                        <i class="fab fa-instagram" id="instagram"></i></a>
-
-                        <a target="_blank" href="https://twitter.com/rlozano__"><i class="fab fa-twitter" id="twitter"></i></a>
-
-                    </div>
-
-                <p id="p4">rlozano@ucdavis.edu</p>
-                <p id="p5">Tel: 707-245-6435</p>
-
-            </div>
-            <!--</footer>-->
-            </div>
-            </div>
-        </section>
-
-
-      <script
-  src="https://code.jquery.com/jquery-3.2.1.js"
-  integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
-  crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-    <script>
-        window.sr = ScrollReveal();
-
-        sr.reveal('.navbarName', {
-          duration: 2000,
-          origin:'left',
-          distance:'50px'
-        });
-
-
-        /*sr.reveal('.navbar-collapse .collapse .in a', {
-          duration: 2000,
-          origin:'left',
-          distance:'50px'
-        });
-
-
-        sr.reveal('#nav1 #navbar #home', {
-          delay: 500,
-          duration: 2000,
-          origin:'left',
-          distance:'0px'
-        });
-        sr.reveal('#nav1 #navbar #about', {
-          delay: 900,
-          duration: 2000,
-          origin:'left',
-          distance:'0px'
-        });
-        sr.reveal('#nav1 #navbar #portfolio', {
-          delay: 1300,
-          duration: 2000,
-          origin:'left',
-          distance:'0px'
-        });
-        sr.reveal('#nav1 #navbar #resume', {
-          delay: 1600,
-          duration: 2000,
-          origin:'left',
-          distance:'0px'
-        });*/
-
-        sr.reveal('.clock', {
-          delay: 1100,
-          duration: 1500,
-          origin:'top',
-          distance:'300px',
-          viewFactor: 0.2
-        });
-        sr.reveal('.firstSection-left', {
-          duration: 2000,
-          origin:'left',
-          distance:'300px'
-        });
-        sr.reveal('.firstSection-right', {
-          duration: 2000,
-          origin:'right',
-          distance:'300px'
-        });
-        sr.reveal('.secondSection-left', {
-          duration: 2000,
-          origin:'bottom',
-          distance:'100px',
-          viewFactor: 0.2
-        });
-        sr.reveal('.secondSection-right', {
-          duration: 2000,
-          origin:'right',
-          distance:'300px',
-          viewFactor: 0.2
-        });
-        sr.reveal('.secondSection-right #list1', {
-          delay: 300,
-          duration: 2000,
-          origin:'right',
-          distance:'300px',
-          viewFactor: 0.2
-        });
-        sr.reveal('.secondSection-right #list2', {
-          delay: 700,
-          duration: 2000,
-          origin:'right',
-          distance:'300px',
-          viewFactor: 0.2
-        });
-        sr.reveal('.secondSection-right #list3', {
-          delay: 1100,
-          duration: 2000,
-          origin:'right',
-          distance:'300px',
-          viewFactor: 0.2
-        });
-        sr.reveal('.secondSection-right #list4', {
-          delay: 1500,
-          duration: 2000,
-          origin:'right',
-          distance:'300px',
-          viewFactor: 0.2
-        });
-        sr.reveal('.secondSection-right #list5', {
-          delay: 1900,
-          duration: 2000,
-          origin:'right',
-          distance:'300px',
-          viewFactor: 0.2
-        });
-        sr.reveal('.secondSection-right #list6', {
-          delay: 2300,
-          duration: 2000,
-          origin:'right',
-          distance:'300px',
-          viewFactor: 0.2
-        });
-        sr.reveal('.secondSection-right #list7', {
-          delay: 2700,
-          duration: 2000,
-          origin:'right',
-          distance:'300px',
-          viewFactor: 0.2
-        });
-        sr.reveal('.secondSection-right #list8', {
-          delay: 3100,
-          duration: 2000,
-          origin:'right',
-          distance:'300px',
-          viewFactor: 0.2
-        });
-        sr.reveal('.secondSection-right #list9', {
-          delay: 3500,
-          duration: 2000,
-          origin:'right',
-          distance:'300px',
-          viewFactor: 0.2
-        });
-        sr.reveal('.secondSection-right #list10', {
-          delay: 3900,
-          duration: 2000,
-          origin:'right',
-          distance:'300px',
-          viewFactor: 0.2
-        });
-        sr.reveal('#socialinfo h2, #socialinfo p', {
-          delay: 700,
-          duration: 1000,
-          origin:'right',
-          distance:'0px',
-          viewFactor: 0.2
-        });
-        sr.reveal('#socialIcons', {
-          delay: 400,
-          duration: 1000,
-          origin:'right',
-          distance:'0px',
-          viewFactor: 0.2
-        });
-    </script>
-
-
-    <script>
-    $(function() {
-      // Smooth Scrolling
-      $('a[href*="#"]:not([href="#"])').click(function() {
-        if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
-          var target = $(this.hash);
-          target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
-          if (target.length) {
-            $('html, body').animate({
-              scrollTop: target.offset().top
-            }, 1000);
-            return false;
-          }
-        }
-      });
-    });
-    </script>
-
-    </body>
+<head>
+    <title>Roberto Lozano</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <link type="text/css" rel="stylesheet" href="css/reset.css">
+    <link type="text/css" rel="stylesheet" href="css/index.css">    
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://cdn.rawgit.com/balzss/luxbar/ae5835e2/build/luxbar.min.css">
+
+</head>
+
+<body>
+  <div id="nav">
+    <div id="left_nav">
+      <p>RLJ</p>
+      <a href="https://github.com/robertolozano">
+        <img id="github_pic" src="images/github.png">
+      </a>
+      <a href="https://www.linkedin.com/in/roberto-lozano-272503163/">
+        <img id="linkedin_pic" src="images/linkedin.png">
+      </a>
+    </div>
+    <div id="right_nav">
+      <a href="./index.html">Home</a>
+      <a href="./index.html">Portfolio</a>
+      <a href="./index.html">What I'm up to</a>
+    </div>
+  </div>
+
+
+  <div id="me_section">
+    <div id="me_section_left">
+      <p id="me_section_left_name">Roberto Lozano Jr.</p>
+      <p id="me_section_left_name2">Recent computer science graduate passionate about web apps and web development.</p>
+    </div>
+
+    <div id="me_section_right">
+      <img id="parkBenchPic" src="images/goodlooking.jpeg">
+    </div>
+  </div>
+
+  <div id="what_ive_been_up_to">
+    <p id="what_ive_been_up_to_title">What I've been up to</p>
+    <div class="project">
+      <div id="project_pic_div">
+        <img id="project_pic" src="images/hungr.png">
+      </div>
+      <div class="project_title_and_desc">
+        <p class="project_title">Hungr</p>
+        <p class="project_description">Hungr is a web app that solves the problem of not being able
+          to decide what to eat. Similar to the tinder style of swiping,
+          users will swipe on which restaurants they like to decide on
+          a winner. 
+          <br><br>
+          •HTML  •CSS  •Javascript  •Node  •Swiper API  •Sockets
+          •Firebase Authentication   •Firebase Database</p>
+        </div>
+    </div>
+
+    <div class="project">
+      <div id="project_pic_div">
+        <img id="project_pic" src="images/LStore.png">
+      </div>
+      <div class="project_title_and_desc">
+        <p class="project_title">QueCC L-Store Database</p>
+        <p class="project_description">A database built on the L-Store design by UC Davis Professor 
+          Sadoghi which allows for fast  read and writes. Uses QueCC 
+          concurrency control which allows for a contentionless design
+          when operating transactions.
+          <br><br>
+          •Python</p>
+        </div>
+    </div>
+    <div class="project">
+      <div id="project_pic_div">
+        <img id="project_pic" src="images/trivio.png">
+      </div>
+      <div class="project_title_and_desc">
+        <p class="project_title">Triv-io App</p>
+        <p class="project_description">An app for quickly setting up trivia games and adding friends
+          across the world to play against in fun, competitive matches.
+          <br><br>
+          •Swift  •Firebase Authentication  •Firebase Database</p>
+        </div>
+    </div>
+    <div>
+
+    </div>
+  </div>
+
+</body>
 
 </html>
