--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <div id="nav">
     <div id="left_nav">
-      <p>RLJ</p>
+      <p id="RLJ_Logo">RLJ</p>
       <a href="https://github.com/robertolozano">
         <img id="github_pic" src="images/github.png">
       </a>
@@ -29,7 +29,7 @@
     <div id="right_nav">
       <a href="./index.html">Home</a>
       <a href="./index.html">Portfolio</a>
-      <a href="./index.html">What I'm up to</a>
+      <a href="#what_ive_been_up_to_title">What I'm up to</a>
     </div>
   </div>
 
@@ -56,10 +56,9 @@
         <p class="project_description">Hungr is a web app that solves the problem of not being able
           to decide what to eat. Similar to the tinder style of swiping,
           users will swipe on which restaurants they like to decide on
-          a winner. 
-          <br><br>
-          •HTML  •CSS  •Javascript  •Node  •Swiper API  •Sockets
-          •Firebase Authentication   •Firebase Database</p>
+          a winner.</p>
+        <p class="tech_stack">•HTML  •CSS  •Javascript  •Node  •Swiper API  •Sockets
+        •Firebase Authentication   •Firebase Database</p>
         </div>
     </div>
 
@@ -72,9 +71,9 @@
         <p class="project_description">A database built on the L-Store design by UC Davis Professor 
           Sadoghi which allows for fast  read and writes. Uses QueCC 
           concurrency control which allows for a contentionless design
-          when operating transactions.
-          <br><br>
-          •Python</p>
+          when operating transactions.</p>
+          
+        <p class="tech_stack">•Python</p>
         </div>
     </div>
     <div class="project">
@@ -84,15 +83,19 @@
       <div class="project_title_and_desc">
         <p class="project_title">Triv-io App</p>
         <p class="project_description">An app for quickly setting up trivia games and adding friends
-          across the world to play against in fun, competitive matches.
-          <br><br>
-          •Swift  •Firebase Authentication  •Firebase Database</p>
+          across the world to play against in fun, competitive matches.</p>
+        <p class="tech_stack">•Swift  •Firebase Authentication  •Firebase Database</p>
         </div>
     </div>
     <div>
 
     </div>
   </div>
+
+
+  <script src="https://unpkg.com/scrollreveal"></script>
+  <script src="javascript/script.js"></script>
+
 
 </body>
 
