added underlines to links

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
       </a>
     </div>
     <div id="right_nav">
-      <a href="./index.html">Home</a>
-      <a href="./index.html">Portfolio</a>
-      <a href="#what_ive_been_up_to_title">What I'm up to</a>
+      <a class="custom-btn btn-3" href="./index.html"><span>Home</span></a>
+      <a class="custom-btn btn-3" href="./index.html"><span>Portfolio</span></a>
+      <a class="custom-btn btn-3" href="#what_ive_been_up_to_title"><span>What I'm up to</span></a>
     </div>
   </div>
 
