adding alt tags to images

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <div id="left_nav">
       <p id="RLJ_Logo">RLJ</p>
       <a href="https://github.com/robertolozano">
-        <img id="github_pic" src="images/github.png">
+        <img id="github_pic" src="images/github.png" alt="githubLogo">
       </a>
       <a href="https://www.linkedin.com/in/roberto-lozano-272503163/">
-        <img id="linkedin_pic" src="images/linkedin.png">
+        <img id="linkedin_pic" src="images/linkedin.png" alt="linkedinLogo">
       </a>
     </div>
     <div id="right_nav">
@@ -41,7 +41,7 @@
     </div>
 
     <div id="me_section_right">
-      <img id="parkBenchPic" src="images/goodlooking.jpeg">
+      <img id="parkBenchPic" src="images/goodlooking.jpeg" alt="pictureOfRoberto">
     </div>
   </div>
 
@@ -49,7 +49,7 @@
     <p id="what_ive_been_up_to_title">What I've been up to</p>
     <div class="project">
       <div id="project_pic_div">
-        <img id="project_pic" src="images/hungr.png">
+        <img id="project_pic" src="images/hungr.png" alt="projectPicture">
       </div>
       <div class="project_title_and_desc">
         <p class="project_title">Hungr</p>
@@ -57,14 +57,14 @@
           to decide what to eat. Similar to the tinder style of swiping,
           users will swipe on which restaurants they like to decide on
           a winner.</p>
-        <p class="tech_stack">•HTML  •CSS  •Javascript  •Node  •Swiper API  •Sockets
+        <p class="tech_stack">•HTML  •CSS  •Javascript  •Node  •Yelp API  •Swiper API  •Web Sockets
         •Firebase Authentication   •Firebase Database</p>
         </div>
     </div>
 
     <div class="project">
       <div id="project_pic_div">
-        <img id="project_pic" src="images/LStore.png">
+        <img id="project_pic" src="images/LStore.png" alt="projectPicture">
       </div>
       <div class="project_title_and_desc">
         <p class="project_title">QueCC L-Store Database</p>
@@ -78,7 +78,7 @@
     </div>
     <div class="project">
       <div id="project_pic_div">
-        <img id="project_pic" src="images/trivio.png">
+        <img id="project_pic" src="images/trivio.png" alt="projectPicture">
       </div>
       <div class="project_title_and_desc">
         <p class="project_title">Triv-io App</p>
