improving lighthouse score

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <title>Roberto Lozano</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="description" content="Roberto Lozano Jr's Personal Website">   
+
     <link type="text/css" rel="stylesheet" href="css/reset.css">
     <link type="text/css" rel="stylesheet" href="css/index.css">    
     <link rel="preconnect" href="https://fonts.gstatic.com">
