--- a/des157/index.html
+++ b/des157/index.html
@@ -30,7 +30,7 @@
                 </ul>
                 <h2>Experiments</h2>
                 <ul>
-                    <li><a href="">Exp1</a></li>
+                    <li><a href="./exp/exp1.html">Exp1</a></li>
                 </ul>
                 <h2>Writing</h2>
                 <ul>
