--- a/des157/index.html
+++ b/des157/index.html
@@ -34,7 +34,7 @@
                 </ul>
                 <h2>Writing</h2>
                 <ul>
-                    <li><a href="">Learning Journal</a></li>
+                    <li><a href="./lj/index.html">Learning Journal</a></li>
                 </ul>
             </div>
             <div>
