--- a/des157/index.html
+++ b/des157/index.html
@@ -31,6 +31,7 @@
                 <h2>Experiments</h2>
                 <ul>
                     <li><a href="./exp/exp1.html">Exp1</a></li>
+                    <li><a href="./exp/exp2.html">Exp2</a></li>
                 </ul>
                 <h2>Writing</h2>
                 <ul>
