--- a/des157/exp/exp2.html
+++ b/des157/exp/exp2.html
@@ -9,5 +9,10 @@
 </head>
 <body>
     <h1>Exp 2</h1>
+
+    <button id="addp">Add paragraph</button>
+    <button id="changecolor">Change text color</button>
+
+    <div></div>
 </body>
 </html>
