--- a/des157/exp/exp2.html
+++ b/des157/exp/exp2.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Exp 2</h1>
+    <p>Automatically capitalizes your first letter!</p>
 
     <button id="addp">Add paragraph</button>
     <button id="changecolor">Change text color</button>
