--- a/des157/lj/index.html
+++ b/des157/lj/index.html
@@ -20,6 +20,38 @@
         <div id="banner"></div>
 
         <article>
+            <h2><a href="https://uxplanet.org/best-practices-for-modals-overlays-dialog-windows-c00c66cddd8c">Best Practices for Modals / Overlays / Dialog Windows</a></h2>
+            <div>
+                <h3 id="date">March 20, 2017</h3>
+                <h3 id="author">Naema Baskanderi</h3>
+            </div>
+            <p><span class="first_letter">M</span>
+                odals have been a long-standing staple of the internet world. We've all
+                become very accustomed to them. However, our familiarity with modals doesn't 
+                always come with a positive connotation. This is a key part of what the author, 
+                Naema Baskanderi, addresses in their article <span class="blue">Best Practices for Modals / Overlays 
+                / Dialog Windows </span>. Here, Baskanderi addresses the key flaws that we often see with 
+                modals, which is the overuse in abruptly interrupting the user experience to bombard 
+                you with popup-like information. As users, we have become too accustomed to dismissing 
+                them immediately when the entire purpose of the modals should be to give us useful 
+                information or help us accomplish a task.
+                <br><br>
+                I myself, relate to a lot of the points that Baskanderi brings up, as I've experienced 
+                lots of poor uses of modals. However, I feel like I have learned a lot from this article 
+                in how I can improve my use of modals in the future. One important point that is really 
+                driven home throughout the article is to <span class="blue">avoid interrupting the user</span>. Everything must cater 
+                to the user experience and must come from the user's intention. Some examples of this that 
+                are brought up in the article are to ensure the modals are user-initiated and making your 
+                buttons/title as helpful to the user so that they can accomplish the goal they were trying 
+                to accomplish. The one that stood out to me was making sure the modal was escapable by 
+                keyboard which is something I had not considered but can see how it would drastically 
+                improve accessibility for users. Overall, I feel I have learned a lot from the article 
+                which I will be implementing in my modals moving forward.
+            </p>
+            <div class="article_border"></div>
+        </article>
+
+        <article>
             <h2><a href="https://uxdesign.cc/best-practices-for-form-design-ff5de6ca8e5f">Best practices for form design</a></h2>
             <div>
                 <h3 id="date">April 14, 2021</h3>
