--- a/des157/studio1/index.html
+++ b/des157/studio1/index.html
@@ -85,7 +85,7 @@
     <footer>
         <nav>
             <a id="email" href="mailto:rlozano@ucdavis.edu">Email</a>
-            <a id="html" href="https://validator.w3.org/check?uri=https://yourusername.github.io/des157/studio1">Valid HTML 5</a>
+            <a id="html" href="https://validator.w3.org/check?uri=https://robertolozano.github.io/des157/studio1">Valid HTML 5</a>
             <a id="css" href="https://jigsaw.w3.org/css-validator/check/referer">Valid CSS</a>
         </nav>
     </footer>
