--- a/des157/studio1/index.html
+++ b/des157/studio1/index.html
@@ -64,7 +64,7 @@
             </div>
             </form>
 
-            <input type="submit" value="Send" id="submit">
+            <input type="submit" value="Submit" id="submit">
         </div>
 
         <div class="hidden" id="result">
