learning journal article 3 remove first span

--- a/des157/lj/index.html
+++ b/des157/lj/index.html
@@ -27,8 +27,8 @@
                 <h3 id="author">Michael Gonchar</h3>
             </div>
             <p><span class="first_letter">C</span>
-                uriosity is powerful. This is something that Gonchar drives home in their article <span class="blue">"10 Intriguing 
-                Photographs to Teach Close Reading and Visual Thinking Skills"</span> , where Gonchar lays out the importance of
+                uriosity is powerful. This is something that Gonchar drives home in their article "10 Intriguing 
+                Photographs to Teach Close Reading and Visual Thinking Skills" , where Gonchar lays out the importance of
                 digging deeper and exploring all the tiny details. By doing this, one is able to learn a lot more about
                 the world and extrapolate information that they would have otherwise missed. Thus Gonchar urges the reader
                 to be curious and always be seeking out new ideas and expanding their view of the world by examining all
