article 3 spell check

--- a/des157/lj/index.html
+++ b/des157/lj/index.html
@@ -28,22 +28,22 @@
             </div>
             <p><span class="first_letter">C</span>
                 uriosity is powerful. This is something that Gonchar drives home in their article "10 Intriguing 
-                Photographs to Teach Close Reading and Visual Thinking Skills" , where Gonchar lays out the importance of
-                digging deeper and exploring all the tiny details. By doing this, one is able to learn a lot more about
-                the world and extrapolate information that they would have otherwise missed. Thus Gonchar urges the reader
-                to be curious and always be seeking out new ideas and expanding their view of the world by examining all
-                the little details.
-                <br><br>
-                A site that I feel exemplifies this curiosity is the site by designer Virgil Abloh, <span class="blue">
-                <a href="https://public---domain.com/" class="blue">public---domain</a></span>. In his site, he doesn't follow
-                your typical layout for a website. Much like his designs, Virgil decides to break the what is considered the norm
-                and decides to take his own spin on things. Instead its setup as a computers desktop with all sorts of information
-                being presented to you. You have all sorts of windows open ranging from an interview to an image that links you
-                to an article on Aya Brown. Furthermore since the website is set up like a desktop you can also explore the files on
-                the computer, which invites you to just explore through the wide array of images, videos, and files. Through that journey
-                of discovery you get to take a peek into the early designs or inspirations of some of Virgil's iconic pieces and
-                slowly understand perhaps what Virgil and his team were thinking while creating his work. This I feel truly shows
-                that curiosity and willingness to dig deeper to expand your world knowledge that Gonchar was speaking upon.
+                Photographs to Teach Close Reading and Visual Thinking Skills", where Gonchar lays out the importance 
+                of digging deeper and exploring all the tiny details. By doing this, one is able to learn a lot more 
+                about the world and extrapolate information that they would have otherwise missed. Thus Gonchar urges 
+                the reader to be curious and always be seeking out new ideas and expanding their view of the world by 
+                examining all the little details. 
+
+                A site that I feel exemplifies this curiosity is the site by designer Virgil Abloh, <a href="https://public---domain.com/" class="blue">public---domain.</a> 
+                On his site, he doesn't follow your typical layout for a website. Much like his designs, Virgil decides 
+                to break what is considered the norm and decides to take his own spin on things. Instead it's set up like 
+                a computer's desktop with all sorts of information being presented to you. You have all sorts of windows 
+                open ranging from an interview to an image that links you to an article on Aya Brown. Furthermore, 
+                since the website is set up like a desktop you can also explore the files on the computer, which invites 
+                you to just explore through the wide array of images, videos, and files. Through that journey of discovery, 
+                you get to take a peek into the early designs or inspirations of some of Virgil's iconic pieces and 
+                slowly understand perhaps what Virgil and his team were thinking while creating his work. This I feel 
+                truly shows that curiosity and willingness to dig deeper to expand your world knowledge that Gonchar was speaking upon.
             </p>
             <div class="article_border"></div>
         </article>
