learning journal every picture margin and typos

--- a/des157/lj/index.html
+++ b/des157/lj/index.html
@@ -43,7 +43,7 @@
                         that I love about this particular silohuette.
                         <br><br>
                         This collection will tell the story of my own personal interests in sneakers to the history 
-                        that this particular silohuette has had in culture, starting from its start in basketball
+                        that this particular silohuette has had in culture, from its start in basketball
                         to its current presence in sneaker culture.
                     </p>
                 </div>
