learning journal rosie journal entry

--- a/des157/lj/index.html
+++ b/des157/lj/index.html
@@ -53,10 +53,12 @@
                         <figcaption>Rosie Peng, 2021</figcaption>
                     </figure>
                     <p>This image is about London and Mystery (possibly Sherlock Holmes) 
+                        <br><br>
                         The most interesting aspects of this image are the pieces laying on top of
                         the map. The map itself gives you lots of info about London being an important
                         part, however the pieces laying about add more mystery to the image. They all seem to
-                        relate to mystery and/or Sherlock Holmes.
+                        relate to the topic of mystery and/or Sherlock Holmes.
+                        <br><br>
                         The most obvious aspects as I said is the London map. The more mysterious aspects
                         are the artifacts on top which hint at something more mysterious (quite literally).
                     </p>
