--- a/des157/studio2/index.html
+++ b/des157/studio2/index.html
@@ -14,11 +14,11 @@
     <div id="container">
         <h1>Every Sneaker</h1>
         <div id="sneaker_section">
-            <img src="images/box_closed.png">
-            <img src="images/box_closed.png">
-            <img src="images/box_closed.png">
-            <img src="images/box_closed.png">
-            <img src="images/box_closed.png">
+            <img alt="sneaker" src="images/box_closed.png">
+            <img alt="sneaker" src="images/box_closed.png">
+            <img alt="sneaker" src="images/box_closed.png">
+            <img alt="sneaker" src="images/box_closed.png">
+            <img alt="sneaker" src="images/box_closed.png">
         </div>    
         <div id="overlay" class="overlay_hidden">
             <button id="exit_overlay">X</button>
