learning journal - Games

--- a/des157/lj/index.html
+++ b/des157/lj/index.html
@@ -19,6 +19,30 @@
 
         <div id="banner"></div>
 
+        <article>
+            <h2><a href="https://uxplanet.org/game-design-ux-best-practices-guide-4a3078c32099">Game Design UX Best Practices</a></h2>
+            <div>
+                <h3 id="date">April 16, 2019</h3>
+                <h3 id="author">Amir Dori</h3>
+            </div>
+            <p><span class="first_letter">G</span>
+                ames have become a very normal part of our lives and things such as menus, popups, or button placement 
+                aren't really things that one considers too important. However, in their article "Game Design UX Best 
+                Practices", Amir Dori, goes on to share his vast experience in game design, after having designed 250+ 
+                games and shares how extremely important these elements are and all the thought that goes into it. 
+                Amir covers a wide array of topics such as store dialog, rate us dialogs, draggable objects, sliders, 
+                menus, and positioning of elements on the screen. However, the common theme that stood out to me which 
+                really surprised me because I had not really noticed until now was that the buttons placed in more 
+                comfortable and easy to reach zones of the screen are the ones that benefit the app most, such as stores, 
+                rating, or ads. Since these are placed in easier to reach locations then they are more likely to be clicked 
+                on. From this, you can see how the placement is very intentional and not by accident at all. Amir also 
+                points out the way in which this skirts the line of being dark UI, however, Amir also gives good advice 
+                on making sure that the transactions are a win-win situation such as making sure the video rewards are 
+                actually useful to the player, thus never completely taking advantage of the user.
+            </p>
+            <div class="article_border"></div>
+        </article>
+
         <article id="everypicture">
             <h2>Every Picture</h2>
             <div id="images">
