--- a/des157/studio3/play.html
+++ b/des157/studio3/play.html
@@ -10,12 +10,26 @@
 	<link href="play.css" rel="stylesheet">
 </head>
 <body>
+    <audio id="background_music">
+        <source src="./sounds/background2.mp3" type="audio/mp3">
+    </audio>
+    <audio id="fire_attack">
+        <source src="./sounds/fireattack.wav" type="audio/wav">
+    </audio>
+    <audio id="electric_attack">
+        <source src="./sounds/electric_attack.wav" type="audio/wav">
+    </audio>
+    <audio id="heal_up">
+        <source src="./sounds/172589__qubodup__health-potion-166188-drminky-potion-drink-regen.flac" type="audio/flac">
+    </audio>
     <div id="container">
-
         <div id="top_pokemon">
             <div id="top_left_side">
                 <div class="pokemon_info">
-                    <p id="pokemon_2_name">Pikachu</p>
+                    <div class="name_and_health">
+                        <p id="pokemon_2_name">Pikachu</p>
+                        <p id="pokemon_2_health_text" class="health_text">100/100</p>
+                    </div>
                     <div class="pokemon_health">
                     </div>
                     <div id="pokemon_2_health" class="pokemon_health_remaining">
@@ -35,7 +49,10 @@
             </div>
             <div id="top_left_side">
                 <div class="pokemon_info">
-                    <p id="pokemon_1_name" class="pokemon_name">Charmander</p>
+                    <div class="name_and_health">
+                        <p id="pokemon_1_name" class="pokemon_name">Charmander</p>
+                        <p id="pokemon_1_health_text" class="health_text">100/100</p>
+                    </div>
                     <div class="pokemon_health">
                     </div>
                     <div id="pokemon_1_health" class="pokemon_health_remaining">
@@ -71,31 +88,8 @@
         </div>
         <img id="lightning" class="attack_hidden" src="images/lightning2.png">
         <img id="flame" class="attack_hidden" src="images/flame.png">
-        <img id="health" class="attack_hidden" src="images/health.png"
+        <img id="health" class="attack_hidden" src="images/health.png">
     </div>
-
-
-
-
-
-
-
-
-
-
-    <!-- <h1>Game of PIG</h1>
-    <p>There are two players. The player whose turn it is rolls the dice. The total of the roll is added to the current player's score, unless either die comes up as a "one". If this happens, this player's turn is over, and it is the other player’s turn. After each roll, the current player can either roll again, (assuming a "one" was not rolled) or if the current player feels that luck is running thin, they can pass to the other player. The first player to get 30 points or higher wins.</p> 
-    <p>Oh, and if you roll two "ones" (snake eyes), your current score gets zeroed out. So don’t do that.</p> -->
-
-    <!-- <div id="gamecontrol">
-        <h2>Start a Game</h2>
-        <button id="startgame">Randomly Pick the First Player, and Start the Game</button>
-    </div>
-
-    <div id="game"></div>
-    <div id="actions"></div>
-    <div id="score"></div>
--->
     <script src="play.js"></script>
 </body>
 </html>
